[gd_scene load_steps=5 format=3 uid="uid://88hd8v0pfuty"]

[ext_resource type="Script" path="res://main.gd" id="1_322bb"]
[ext_resource type="Script" path="res://web_socket.gd" id="1_phtfe"]
[ext_resource type="Texture2D" uid="uid://d28qyvrvs6cyl" path="res://Green.png" id="3_77xol"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s4xda"]
bg_color = Color(1.15514e-06, 0.720649, 0.321285, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_322bb")

[node name="FirebotWebsocket" type="Node" parent="."]
script = ExtResource("1_phtfe")

[node name="Green" type="Sprite2D" parent="."]
position = Vector2(203, 288)
scale = Vector2(2, 2)
texture = ExtResource("3_77xol")
offset = Vector2(0, -30.5)

[node name="TemperatureBar" type="ProgressBar" parent="."]
offset_left = 37.0
offset_top = 88.0
offset_right = 368.0
offset_bottom = 136.0
theme_override_styles/fill = SubResource("StyleBoxFlat_s4xda")
max_value = 50.0
step = 0.5
value = 18.0
show_percentage = false

[connection signal="on_cool_egg" from="FirebotWebsocket" to="." method="_on_firebot_websocket_on_cool_egg"]
[connection signal="on_warm_egg" from="FirebotWebsocket" to="." method="_on_firebot_websocket_on_warm_egg"]
